# fail-whale

./: .editorconfig  .gitignore  Dockerfile  Gemfile  README.md  compose.yml  fly.toml
.github/workflows/: ci.yml
app/controllers/: feed_controller.rb  home_controller.rb
app/services/: chatgpt.rb
app/views/feed/: index.html.erb
app/views/home/: index.html.erb
app/views/layouts/: application.html.erb
app/views/pwa/: manifest.json.erb
config/: database.yml  deploy.yml  puma.rb  routes.rb
config/initializers/: devise.rb
db/: schema.rb
poster/: connect.py  pyproject.toml
poster/poster/: connect.py  env_default.py  main.py  post.py  post_generator.py
poster/poster/loop/: loop.py
poster/poster/models/: post.py
poster/poster/providers/: __init__.py  new_post_provider.py  openai_new_post_provider.py  sql_user_feed_provider.py  user_feed_provider.py
webapp/: .byebug_history  Gemfile
webapp/app/controllers/: feed_controller.rb  posts_controller.rb
webapp/app/controllers/users/: registrations_controller.rb
webapp/app/services/: chatgpt.rb  liquid_renderer.rb
webapp/app/views/feed/: index.html.erb
webapp/app/views/home/: index.html.erb  (+1 more)
webapp/config/: application.rb  credentials.yml.enc  database.yml  importmap.rb  puma.rb  routes.rb
webapp/config/initializers/: devise.rb
webapp/db/: schema.rb
webapp/db/migrate/: 20241227154310_create_posts.rb  20241229155816_add_likes_to_posts.rb
webapp/test/controllers/: feed_controller_test.rb  home_controller_test.rb  posts_controller_test.rb
webapp/test/fixtures/: posts.yml  users.yml
(+2 files in other folders)
